--- a/search1.html
+++ b/search1.html
@@ -8,10 +8,10 @@
 
 <div class="container">
     <div class="row">
-        <a href="search.html">Search</a>
-        <a href="client.html">Client</a>
-        <a href="device.html">Device</a>
-        <a href="workorder.html">Workorder</a>
+        <a href="search1.html">Search</a>
+        <a href="client1.html">Client</a>
+        <a href="device1.html">Device</a>
+        <a href="workorder1.html">Workorder</a>
     </div>
     <div class="row">
         <h1>Search Card</h1>
