--- a/client1.html
+++ b/client1.html
@@ -7,16 +7,16 @@
 <body>
 <div class="container">
     <div class="row">
-        <a href="search.html">Search</a>
-        <a href="client.html">Client</a>
-        <a href="device.html">Device</a>
-        <a href="workorder.html">Workorder</a>
+        <a href="search1.html">Search</a>
+        <a href="client1.html">Client</a>
+        <a href="device1.html">Device</a>
+        <a href="workorder1.html">Workorder</a>
     </div>
     <div class="row">
-        <h1>Device Card</h1>
+        <h1>Client Card</h1>
     </div>
     <div class="row">
-        <a href="workorder.html">Add Workorder</a>
+        <a href="workorder1.html">Add Workorder</a>
     </div>
 </div>
 
