--- a/workorder1.html
+++ b/workorder1.html
@@ -1,24 +1,27 @@
 <html lang="en"><head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Device Card</title>
+    <title>Workorder</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 </head>
 <body>
+
 <div class="container">
     <div class="row">
-        <a href="search.html">Search</a>
-        <a href="client.html">Client</a>
-        <a href="device.html">Device</a>
-        <a href="workorder.html">Workorder</a>
+        <a href="search1.html">Search</a>
+        <a href="client1.html">Client</a>
+        <a href="device1.html">Device</a>
+        <a href="workorder1.html">Workorder</a>
     </div>
     <div class="row">
-        <h1>Client Card</h1>
+        <h1>Workorder Card</h1>
     </div>
     <div class="row">
-        <a href="workorder.html">Add Workorder</a>
+        <form>
+            <input id="workorder_description" placeholder="Add description">
+            <button class="btn btn-primary">New</button>
+        </form>
     </div>
 </div>
-
 
 </body></html>
